# MirageGen

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SPEC.md  justfile  pyproject.toml
assets/animations/: happy_gesture.json  idle.json  sad_gesture.json  thinking_gesture.json
frontend/: package-lock.json  package.json
frontend/public/models/: avatar_g.glb
frontend/src/: App.tsx
frontend/src/assets/: happy_gesture.json  sad_gesture.json  thinking_gesture.json
frontend/src/components/: Avatar.tsx  Chat.tsx  Scene.tsx
frontend/src/types/: index.ts
frontend/src/utils/: animationParser.ts
src/avatar/: main.py
src/avatar/api/: __init__.py  app.py  dependencies.py  middleware.py
src/avatar/api/routes/: __init__.py  chat.py  stream.py
src/avatar/config/: __init__.py  models_config.yaml  settings.py
src/avatar/interfaces/: __init__.py  lipsync.py  llm.py  motion.py  pipeline.py  tts.py
src/avatar/lipsync/: __init__.py  blendshape_mapper.py  factory.py  rhubarb_generator.py
src/avatar/llm/: __init__.py  factory.py  ollama_provider.py  promt_templates.py  text_chunker.py
src/avatar/motion/: __init__.py  animation_mixer.py  factory.py  preset_loader.py  sentiment_analyzer.py
src/avatar/pipeline/: __init__.py  avatar_pipeline.py  streaming_manager.py
src/avatar/schemas/: animation_types.py  api_types.py  audio_types.py  llm_types.py
src/avatar/tts/: __init__.py  audio_utils.py  factory.py  silero_engine.py  xtts_engine.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_lipsync/: test_rhubarb_generator.py
tests/test_llm/: test_ollama_integration.py  test_ollama_provider.py
tests/test_motion/: test_preset_loader.py
tests/test_pipeline/: test_avatar_pipeline.py
tests/test_tts/: test_audio_utils.py  test_factory.py  test_silero_engine.py  test_xtts_engine.py
